--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <title>Module-3</title>
 </head>
 <body>
@@ -28,15 +30,15 @@
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                      <li>
                        <a href="chicken-categories.html">
-                        <br class="hidden-md hidden-sm"> Chicken</a>
+                        <div class="visible-xs bg-danger"> Chicken</div></a>
                      </li>
                      <li>
                        <a href="#">
-                         <br class="hidden-md hidden-sm"> Beef</a>
+                         <div class="visible-xs bg-danger"> Beef</div></a>
                      </li>
                      <li>
                        <a href="#">
-                         <br class="hidden-md hidden-sm"> Sushi</a>
+                         <div class="visible-xs bg-danger"> Sushi</div></a>
                      </li>
                    </ul>
                  </div>
@@ -78,9 +80,5 @@
                 in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.</p>
         </div>
     </div>
-    <script src="js/jquery-3.6.0.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-    
 </body>
 </html>
