--- a/c-m3/index.html
+++ b/c-m3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <title>Module-3</title>
+    <title>Assignment</title>
 </head>
 <body>
     <header>
@@ -16,68 +16,18 @@
             <div class="container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <a href="index.html"><h1>Food, LLC</h1></a>
+                        <h1>Coursera-Spanish_Intro</h1>
                     </div>
-
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
                 </div>
-                <div id="collapsable-nav" class="collapse navbar-collapse">
-                    <ul id="nav-list" class="nav navbar-nav navbar-right">
-                     <li>
-                       <a href="chicken-categories.html">
-                        <div class="visible-xs bg-danger"> Chicken</div></a>
-                     </li>
-                     <li>
-                       <a href="#">
-                         <div class="visible-xs bg-danger"> Beef</div></a>
-                     </li>
-                     <li>
-                       <a href="#">
-                         <div class="visible-xs bg-danger"> Sushi</div></a>
-                     </li>
-                   </ul>
-                 </div>
             </div>
         </nav>
     </header>
-
-    <p class="text-center"><u>Our Menu</u></p>
-
     <div class="container">
         <div class="col-md-12 col-sm-12 col-xs-12">
-            <p class="text-center">Chicken</p>
-            <p class="r1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.</p>
-        </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <p class="text-center">Beef</p>
-            <p class="r2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.</p>
-        </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <p class="text-center">Sushi</p>
-            <p class="r3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus, tenetur maxime itaque voluptatem, dolor voluptatum at.
-                Dolores labore totam suscipit consequatur officia! Id, porro similique fuga natus minus aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero harum explicabo sunt sequi impedit, eos laborum placeat
-                temporibus veniam sed voluptatibus assumenda beatae possimus facilis at, eaque distinctio cumque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia quis veniam hic odio quia libero tempore, porro laborum 
-                in deserunt cupiditate nam voluptatibus quisquam totam repellat id iste. Aliquam.</p>
+            <video width="100%" height="60%" controls>
+                <source src="movie.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
         </div>
     </div>
 </body>
