--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
     </header>
     <div class="container">
         <div class="col-md-12 col-sm-12 col-xs-12">
-            <video width="100%" height="60%" controls>
-                <source src="movie.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-              </video>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam corrupti rerum recusandae voluptatem 
+               laboriosam inventore placeat labore quae iure, suscipit officia dolorem dolorum nisi, animi rem molestias. Officia, possimus minus?</p>
         </div>
     </div>
 </body>
